# Helgatchi

./: .gitattributes  .gitignore  README.md
Software/Helgatchi-Firmware/src/UI/: .eez-project-build  CMakeLists.txt  filelist.txt  images.c  images.h  screens.c  screens.h  structs.h  styles.c  styles.h  ui.c  ui.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_top_bar_center_text.c  ui_comp_top_bar_center_text.h  ui_comp_top_bar_left_text.c  ui_comp_top_bar_left_text.h  ui_comp_top_bar_right_text.c  ui_comp_top_bar_right_text.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_image_dc801_logo.c  ui_img_633823932.c  ui_screen_menu_screen.c  ui_screen_menu_screen.h  ui_screen_settings_screen.c  ui_screen_settings_screen.h  ui_screen_splash_screen.c  ui_screen_splash_screen.h  ui_screen_status_screen.c  ui_screen_status_screen.h  vars.h
Software/Helgatchi-Firmware/src/UI/images/: ui_image_helga_brush1.c  ui_image_helga_brush2.c  ui_image_helga_brush3.c  ui_image_helga_brush4.c  ui_image_helga_brush5.c  ui_image_helga_dance1.c  ui_image_helga_dance2.c  ui_image_helga_dance3.c  ui_image_helga_dance4.c  ui_image_helga_dance5.c  ui_image_helga_dance6.c  ui_image_helga_dance7.c  ui_image_helga_dance8.c  ui_image_helga_dance_party1.c  ui_image_helga_dance_party2.c  ui_image_helga_dance_party3.c  ui_image_helga_dance_party4.c  ui_image_helga_dance_party5.c  ui_image_helga_dance_party6.c  ui_image_helga_dance_party7.c  ui_image_helga_dance_party8.c  ui_image_helga_idle1.c  ui_image_helga_idle2.c  ui_image_helga_idle3.c  ui_image_helga_idle4.c  ui_image_helga_idle5.c  (+22 more)
(+290 files in other folders)
